# TermFix

./: .gitignore  README.md  pyproject.toml  setup.sh  termfix.py
.github/workflows/: tests.yml
termfix/: README.md  config.py  context.py  llm_client.py  monitor.py  termfix.py  ui.py
termfixlib/: __init__.py  config.py  context.py  llm_client.py  markdown.py  monitor.py  safety.py  ui.py
tests/: test_context.py  test_context_lines.py  test_error_lifecycle.py  test_llm_client.py  test_markdown_ui.py  test_popover_server.py  test_prompt_history.py  test_safety.py  test_ui_threadsafe.py
